--- a/libs/themes-base/index.css
+++ b/libs/themes-base/index.css
@@ -594,6 +594,9 @@
 .v-table-rightview .v-table-body,.v-table-rightview .v-table-footer{
     overflow-x: auto;
     overflow-y: auto;
+    scrollbar-width: none;  /* 火狐滚动条无法自定义宽度，只能通过此属性使滚动条宽度变细 */
+    -ms-overflow-style:none;  /* 隐藏滚动条（在IE和Edge两个浏览器中很难更改样式，固采取隐藏方式） */
+
 }
 
 .v-table-leftview .v-table-body {
@@ -851,6 +854,38 @@
     transition: all .1s cubic-bezier(.71,-.46,.88,.6)
 }
 
+/*正常情况下滑块的样式*/
+::-webkit-scrollbar-thumb {
+    // background-color: orange;
+    border-radius: 10px;
+
+}
+
+/*鼠标悬浮在该类指向的控件上时滑块的样式*/
+:hover::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, .2);
+    border-radius: 10px;
+
+}
+
+/*鼠标悬浮在滑块上时滑块的样式*/
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, .4);
+
+}
+
+/*正常时候的主干部分*/
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+
+    background-color: rgba(0, 0, 0, .1);
+}
+
+/*鼠标悬浮在滚动条上的主干部分*/
+::-webkit-scrollbar-track:hover {
+
+    background-color: rgba(0, 0, 0, .01);
+}
 .v-checkbox-checked .v-checkbox-inner:after {
     -webkit-transform: rotate(45deg) scale(1);
     -ms-transform: rotate(45deg) scale(1);
